Crash on particle edit #62849

Closed
opened 2019-03-22 17:50:25 +01:00 by Zen · 6 comments

Hi,

Thank you for all of the work you are doing on Blender, it is an amazing piece of software!

I have attached the system info report and a blend file.
Upon loading into the 'layout' window, clicking and changing the object interaction mode from object mode to particle edit causes the program to immediately quit.

system-info.txt

focushead2.blend

Hi, Thank you for all of the work you are doing on Blender, it is an amazing piece of software! I have attached the system info report and a blend file. Upon loading into the 'layout' window, clicking and changing the object interaction mode from object mode to particle edit causes the program to immediately quit. [system-info.txt](https://archive.blender.org/developer/F6865837/system-info.txt) [focushead2.blend](https://archive.blender.org/developer/F6865833/focushead2.blend)
Author

Added subscriber: @LIII

Added subscriber: @LIII
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou

Added subscriber: @zeauro

Added subscriber: @zeauro

Crash does not happen if Disk Cache option is enabled.

It is not specific to baking of Hair Dynamics. Crash happens for baked Softbodies or baked Cloth.

Crash does not happen if Disk Cache option is enabled. It is not specific to baking of Hair Dynamics. Crash happens for baked Softbodies or baked Cloth.

This issue was referenced by 5ac7675f4c

This issue was referenced by 5ac7675f4c9c06b9c3b5598dff4b9ce1a7a56cbe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62849
No description provided.