Fix T62849: crash entering particle edit mode with hair dynamics